--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--Fireworks CS6 Dreamweaver CS6 target.  Created Wed Oct 02 17:38:16 GMT-0500 2024-->
 </head>
+<center>
 <body bgcolor="#ffffff">
 <img name="index" src="index.png" width="1200" height="1600" id="index" alt="" /></body>
+</center>
 </html>
